--- a/devel/php-igbinary/Makefile
+++ b/devel/php-igbinary/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2024/09/22 14:50:09 taca Exp $
+# $NetBSD: Makefile,v 1.12 2025/02/08 03:41:13 taca Exp $
 
 MODNAME=	igbinary
 PECL_VERSION=	3.2.16
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -17,11 +18,12 @@ CONFIGURE_ARGS+=	--enable-${MODNAME}
 
 PLIST_SRC+=		PLIST
 
-INSTALLATION_DIRS+=	include/php/ext/igbinary
+INSTALLATION_DIRS+=	${PHP_INCDIR}/ext/igbinary
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/igbinary.h \
-		${DESTDIR}${PREFIX}/include/php/ext/igbinary
+		${DESTDIR}${PREFIX}/${PHP_INCDIR}/ext/igbinary
 
+.include "../../www/php-apcu/buildlink3.mk"
 .include "../../lang/php/ext.mk"
 .include "../../mk/bsd.pkg.mk"
