--- a/devel/php-xcache/Makefile
+++ b/devel/php-xcache/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2023/06/06 12:41:10 riastradh Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/08 03:41:14 taca Exp $
 
 MODNAME=	xcache
 PECL_VERSION=	3.2.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel www
 MASTER_SITES=	http://xcache.lighttpd.net/pub/Releases/${PECL_VERSION}/
 EXTRACT_SUFX=	.tar.bz2
