--- a/devel/php-xdebug/Makefile
+++ b/devel/php-xdebug/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.51 2025/01/10 15:48:01 taca Exp $
+# $NetBSD: Makefile,v 1.52 2025/02/08 03:41:15 taca Exp $
 
 MODNAME=		xdebug
+PKGREVISION=		1
 PECL_VERSION=		3.4.1
 CATEGORIES=		devel
 EXTRACT_SUFX=		.tgz
