--- a/graphics/pear-Image_Color/Makefile
+++ b/graphics/pear-Image_Color/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2024/12/13 17:22:10 taca Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/08 03:43:10 taca Exp $
 
 DISTNAME=	Image_Color-1.0.7
+PKGREVISION=	1
 CATEGORIES=	graphics
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,7 +11,7 @@ LICENSE=	gnu-lgpl-v2.1
 
 CONFLICTS=	php-pear-Image_Color-[0-9]*
 
-DEPENDS+=	${PHP_PKG_PREFIX}-gd-[0-9]*:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
 
 .include "../../lang/php/pear.mk"
 .include "../../mk/bsd.pkg.mk"
