--- a/graphics/php-imagick/Makefile
+++ b/graphics/php-imagick/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.66 2024/11/24 06:59:07 adam Exp $
+# $NetBSD: Makefile,v 1.67 2025/02/08 03:43:10 taca Exp $
 
 MODNAME=		imagick
 PECL_VERSION=		3.7.0
+PKGREVISION=		26
 CATEGORIES+=		graphics
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://pecl.php.net/package/imagick/
 COMMENT=		PHP extension for ImageMagick graphics library
-PKGREVISION=		25
 LICENSE=		php
 
 CONFIGURE_ARGS+=	--with-imagick=${BUILDLINK_PREFIX.ImageMagick}
