--- a/mail/ingo/Makefile
+++ b/mail/ingo/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2021/05/14 13:49:13 nia Exp $
+# $NetBSD: Makefile,v 1.30 2025/02/08 03:44:46 taca Exp $
 
 DISTNAME=	ingo-h3-${INGOVER}
 PKGNAME=	ingo-${INGOVER}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	mail www
 #MASTER_SITES+=	ftp://ftp.horde.org/pub/ingo/
 
