--- a/mail/pear-Auth_SASL/Makefile
+++ b/mail/pear-Auth_SASL/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2024/01/07 15:43:09 taca Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/08 03:44:46 taca Exp $
 
 DISTNAME=	Auth_SASL-1.2.0
+PKGREVISION=	1
 CATEGORIES=	mail
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
