--- a/mail/php-mailparse/Makefile
+++ b/mail/php-mailparse/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2022/05/21 09:19:10 taca Exp $
+# $NetBSD: Makefile,v 1.5 2025/02/08 03:44:47 taca Exp $
 
 MODNAME=		mailparse
 PECL_VERSION=		3.1.3
+PKGREVISION=		1
 CATEGORIES+=		mail
 COMMENT=		PHP extension for email message manipulation
 LICENSE=		php
