--- a/mail/roundcube-plugin-carddav/Makefile
+++ b/mail/roundcube-plugin-carddav/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2022/09/29 17:55:49 triaxx Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/08 03:44:47 taca Exp $
 
 DISTNAME=	carddav-v4.4.3
+PKGREVISION=	1
 PKGNAME=	${PHP_PKG_PREFIX}-roundcube-plugin-${DISTNAME:S/-v/-/}
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mstilkerich/}
@@ -72,5 +73,5 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/config.inc.php.dist \
 		${DESTDIR}${PREFIX}/${EGDIR}/config.inc.php
 
-.include "../../lang/php/replace.mk"
+.include "../../lang/php/phpversion.mk"
 .include "../../mk/bsd.pkg.mk"
