--- a/mail/roundcube-plugin-enigma/Makefile
+++ b/mail/roundcube-plugin-enigma/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2023/09/18 03:39:02 taca Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 03:44:47 taca Exp $
 
 PLUGIN=		enigma
+PKGREVISION=	1
 
 MAINTAINER=	taca@NetBSD.org
 COMMENT=	Enigma Plugin for Roundcube
