--- a/mail/roundcube/Makefile
+++ b/mail/roundcube/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.99 2023/09/18 03:39:02 taca Exp $
+# $NetBSD: Makefile,v 1.100 2025/02/08 03:44:47 taca Exp $
 
 DISTNAME=	roundcubemail-${RC_VERS}
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME:S/mail-/-/:S/-complete//}
+PKGREVISION=	1
 
 MAINTAINER=	taca@NetBSD.org
 COMMENT=	Browser-based multilingual IMAP client
