--- a/mail/squirrelmail-decode/Makefile
+++ b/mail/squirrelmail-decode/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2023/11/13 23:13:24 jperkin Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 03:44:48 taca Exp $
 
 DISTNAME=	squirrelmail-decode-1.2
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=squirrelmail/}
 EXTRACT_SUFX=	.tar.bz2
@@ -13,7 +14,7 @@ LICENSE=	gnu-gpl-v2
 
 NO_BUILD=	yes
 
-DEPENDS+=	${PHP_PKG_PREFIX}-iconv>=4.3.3:../../converters/php-iconv
+DEPENDS+=	${PHP_PKG_PREFIX}-iconv>=${PHP_BASE_VERS}:../../converters/php-iconv
 DEPENDS+=	${PHP_PKG_PREFIX}-squirrelmail>=1.4.23pre14997:../../mail/squirrelmail
 
 do-install:
