--- a/mail/turba/Makefile
+++ b/mail/turba/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.55 2022/06/28 11:34:35 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2025/02/08 03:44:48 taca Exp $
 
 DISTNAME=	turba-h3-${TURBAVER}
 PKGNAME=	turba-${TURBAVER}
-PKGREVISION=	12
+PKGREVISION=	13
 CATEGORIES=	mail www
 #MASTER_SITES+=	ftp://ftp.horde.org/pub/turba/
 
