--- a/math/php-stats/Makefile
+++ b/math/php-stats/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2022/05/28 13:33:01 taca Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/08 03:46:08 taca Exp $
 
 MODNAME=	stats
 PECL_VERSION=	2.0.3
+PKGREVISION=	1
 CATEGORIES+=	math
 COMMENT=	PHP extension for statistical computation
 
