--- a/security/php-ssdeep/Makefile
+++ b/security/php-ssdeep/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.8 2022/05/21 16:22:55 taca Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/08 03:52:44 taca Exp $
 #
 
 MODNAME=		ssdeep
 PECL_VERSION=		1.1.0
+PKGREVISION=		1
 CATEGORIES+=		security
 
 MAINTAINER=		khorben@defora.org
