--- a/www/ap2-upload/Makefile
+++ b/www/ap2-upload/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2025/01/05 14:32:42 taca Exp $
+# $NetBSD: Makefile,v 1.12 2025/02/08 03:58:34 taca Exp $
 
 DISTNAME=	mod_upload-1.0
-PKGNAME=	${APACHE_PKG_PREFIX}-${DISTNAME:S/mod_//}
+PKGNAME=	${APACHE_PKG_PREFIX}-${PHP_PKG_PREFIX}-${DISTNAME:S/mod_//}
 CATEGORIES=	www
 MASTER_SITES=	https://ftp.espci.fr/pub/mod_upload/
 
@@ -17,7 +17,8 @@ PHP_VERSIONS_INCOMPATIBLE=	56
 GNU_CONFIGURE=		yes
 GNU_CONFIGURE_APXS2=	no
 CONFIGURE_ARGS+=	--with-apxs=${APXS}
-CONFIGURE_ARGS+=	--with-php-config=${BUILDLINK_PREFIX.php}/bin/php-config
+#CONFIGURE_ARGS+=	--with-php-config=${BUILDLINK_PREFIX.php}/bin/php-config
+CONFIGURE_ARGS+=	--with-php-config=${PREFIX}/bin/php-config${PHP_VER}
 USE_LIBTOOL=		yes
 
 DOC_DIR=		share/doc/${DISTNAME:C/-.*//}
