--- a/www/moodle/Makefile
+++ b/www/moodle/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.103 2024/08/11 07:55:51 wen Exp $
+# $NetBSD: Makefile,v 1.104 2025/02/08 04:02:29 taca Exp $
 
 DISTNAME=	moodle-4.4.2
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	https://sourceforge.net/projects/moodle/files/Moodle/stable404/ \
 		https://jaist.dl.sourceforge.net/project/moodle/Moodle/stable404/
@@ -11,16 +12,16 @@ HOMEPAGE=	https://moodle.org/
 COMMENT=	Course management system based on social constructionism
 LICENSE=	gnu-gpl-v3
 
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=8.1:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-iconv>=8.1:../../converters/php-iconv
-DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=8.1:../../converters/php-mbstring
-DEPENDS+=	${PHP_PKG_PREFIX}-curl>=8.1:../../www/php-curl
-DEPENDS+=	${PHP_PKG_PREFIX}-soap>=8.1:../../net/php-soap
-DEPENDS+=	${PHP_PKG_PREFIX}-intl>=8.1:../../textproc/php-intl
-DEPENDS+=	${PHP_PKG_PREFIX}-zip>=8.1:../../archivers/php-zip
-DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=8.1:../../archivers/php-zlib
-DEPENDS+=	${PHP_PKG_PREFIX}-opcache>=8.1:../../devel/php-opcache
-DEPENDS+=	${PHP_PKG_PREFIX}-sodium>=8.1:../../security/php-sodium
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-iconv>=${PHP_BASE_VERS}:../../converters/php-iconv
+DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
+DEPENDS+=	${PHP_PKG_PREFIX}-curl>=${PHP_BASE_VERS}:../../www/php-curl
+DEPENDS+=	${PHP_PKG_PREFIX}-soap>=${PHP_BASE_VERS}:../../net/php-soap
+DEPENDS+=	${PHP_PKG_PREFIX}-intl>=${PHP_BASE_VERS}:../../textproc/php-intl
+DEPENDS+=	${PHP_PKG_PREFIX}-zip>=${PHP_BASE_VERS}:../../archivers/php-zip
+DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=${PHP_BASE_VERS}:../../archivers/php-zlib
+DEPENDS+=	${PHP_PKG_PREFIX}-opcache>=${PHP_BASE_VERS}:../../devel/php-opcache
+DEPENDS+=	${PHP_PKG_PREFIX}-sodium>=${PHP_BASE_VERS}:../../security/php-sodium
 
 EGDIR=			share/examples/moodle
 MOODLEDIR=		${PREFIX}/share/moodle
@@ -32,7 +33,7 @@ INSTALLATION_DIRS=	${EGDIR} share/moodle
 .include "../../mk/bsd.prefs.mk"
 .include "options.mk"
 
-PHP_VERSIONS_INCOMPATIBLE=	56 74 80
+PHP_VERSIONS_ACCEPTED=		81 82 83
 
 PKG_GROUPS_VARS=	APACHE_GROUP
 PKG_USERS_VARS=		APACHE_USER
