--- a/devel/msgpack/Makefile
+++ b/devel/msgpack/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2024/08/19 12:06:07 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2025/02/08 04:23:34 taca Exp $
 
 DISTNAME=	msgpack-c-6.1.0
 PKGNAME=	${DISTNAME:S/-c-/-/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=msgpack/}
 GITHUB_PROJECT=	msgpack-c
@@ -18,5 +18,6 @@ PKGCONFIG_OVERRIDE=	msgpack-c.pc.in
 
 .include "../../devel/cmake/build.mk"
 .include "../../devel/googletest/buildlink3.mk"
+.include "../../textproc/cJSON/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
