--- a/archivers/R-zip/Makefile
+++ b/archivers/R-zip/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/10/18 22:54:56 mef Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/08 06:53:43 mef Exp $
 
 R_PKGNAME=	zip
-R_PKGVER=	2.3.1
+R_PKGVER=	2.3.2
 CATEGORIES=	archivers
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,7 +13,15 @@ TEST_DEPENDS+=	R-processx-[0-9]*:../../sysutils/R-processx
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-withr-[0-9]*:../../devel/R-withr
 
-TEST_DEPENDS+=	tex-texlive.infra-[0-9]*:../../print/tex-texlive.infra
+# !pdfTeX error: pdflatex (file tctt1000): Font tctt1000 at 600 not found
+# mktexpk is here: but no luck
+#EST_DEPENDS+=	tex-texlive-scripts-[0-9]*:../../print/tex-texlive-scripts
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
