--- a/fonts/R-systemfonts/Makefile
+++ b/fonts/R-systemfonts/Makefile
@@ -1,16 +1,27 @@
-# $NetBSD: Makefile,v 1.6 2023/11/12 13:21:25 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/08 08:01:17 mef Exp $
 
 R_PKGNAME=	systemfonts
-R_PKGVER=	1.0.4
-PKGREVISION=	2
+R_PKGVER=	1.2.1
 CATEGORIES=	fonts
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	System Native Font Finding
 LICENSE=	mit	# + file LICENSE
 
+DEPENDS+=	R-jsonlite-[0-9]*:../../textproc/R-jsonlite
+DEPENDS+=	R-lifecycle-[0-9]*:../../devel/R-lifecycle
+
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-farver-[0-9]*:../../graphics/R-farver
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_TOOLS+=	pkg-config
 USE_LANGUAGES=	c c++
